app/components/auth/emailVerification/emailVerification.scss
@import "../../../variables";

.emailVerificationContainer {
  max-width: $container_width;
  margin: 0 auto;

  .innerContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
    border-radius: 2px;
    background-color: #fff;
    border: solid 1px $space_gray16;
  }
}

.title {
  margin-top: 50px;
  font-size: 15px;
  font-weight: 500;
  letter-spacing: 2.7px;
  text-align: center;
  color: $space_gray18;
}

.content {
  margin-top: 23px;
  font-size: 15px;
  line-height: 1.47;
  text-align: center;
  color: $space_gray19;
  white-space: pre-line;
  text-align: center;
}

.emailVerificationCompleteIconWrapper {
  margin-top: 43px;

  svg {
    width: 81.5px;
    height: 81.5px;
  }
}

.confirmButton {
  margin-top: 60.5px;
  @include common-button($space_gray22);
}

.resendEmailButton {
  margin-top: 50px;
  @include common-button($royal_blue1);
}

.emailVerificationFailIconWrapper {
  margin-top: 38.5px;

  svg {
    width: 68px;
    height: 68px;
  }
}

.toEmail {
  margin-top: 12.2px;
  font-size: 15px;
  color: $space_gray19;
  line-height: 1.47;

  .email {
    color: $black_navy1;
  }
}

.isLoadingContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  margin-top: 125.5px;
  width: 403px;
  height: 392.5px;
  border-radius: 2px;
  background-color: #fff;
  border: solid 1px $space_gray16;
}

